修复版本检查逻辑，引入Objects类处理空值异常，优化代码结构